Terraform/modules/jenkins/main.tf
  data "aws_ami" "ubuntu" {
    most_recent = true
    owners      = ["099720109477"] # Canonical (official Ubuntu)

    filter {
      name   = "name"
      values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
    }
  }

  resource "aws_security_group" "jenkins_sg" {
    name   = "${var.project_name}-jenkins-sg"
    vpc_id = var.vpc_id

    ingress {
      description = "SSH"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = var.allowed_cidrs
    }

    ingress {
      description = "Jenkins UI"
      from_port   = 8080
      to_port     = 8080
      protocol    = "tcp"
      cidr_blocks = var.allowed_cidrs
    }

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "${var.project_name}-jenkins-sg"
    }
  }

  resource "aws_instance" "jenkins" {
    ami                         = data.aws_ami.ubuntu.id
    instance_type               = var.instance_type
    subnet_id                   = var.subnet_id
    key_name                    = var.key_name
    vpc_security_group_ids      = [aws_security_group.jenkins_sg.id]
    associate_public_ip_address = true

    tags = {
      Name = "${var.project_name}-jenkins"
    }
  }
